Scrubbing on Video Sequencer does not produce sound if scrbbing spans only a few frames #125011

Closed
opened 2024-07-18 19:52:14 +02:00 by Raimon Guarro · 12 comments

System Information
Operating system: Linux-6.1.0-21-amd64-x86_64-with-glibc2.36 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.183.01

Blender Version
Broken: version: 4.2.0, branch: blender-v4.2-release, commit date: 2024-07-16 06:20, hash: a51f293548ad
Worked: 4.1.1
Caused by 91eb50ec2f

Short description of error
Scrubbing audio files doesn't scrub at every frame, it looks it scrubs by chunks of audio.

Exact steps for others to reproduce the error

  1. Start Blender using a Video Editing Template
  2. In a Video Sequence Editor, put an mp3 or wav audio file. Shift+A > Sound
  3. Activate Scrubbing in the Playback settings from the Timeline Editor.
  4. Advance frames in time one by one using right keyboard arrow. Sound frames aren't reproduced. They are only reproduced if you keep pressed the arrow key, or if you scrub a large enough timespan using the mouse.
**System Information** Operating system: Linux-6.1.0-21-amd64-x86_64-with-glibc2.36 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.183.01 **Blender Version** Broken: version: 4.2.0, branch: blender-v4.2-release, commit date: 2024-07-16 06:20, hash: `a51f293548ad` Worked: 4.1.1 Caused by 91eb50ec2f **Short description of error** Scrubbing audio files doesn't scrub at every frame, it looks it scrubs by chunks of audio. **Exact steps for others to reproduce the error** 1. Start Blender using a Video Editing Template 2. In a Video Sequence Editor, put an mp3 or wav audio file. Shift+A > Sound 3. Activate Scrubbing in the Playback settings from the Timeline Editor. 4. Advance frames in time one by one using right keyboard arrow. Sound frames aren't reproduced. They are only reproduced if you keep pressed the arrow key, or if you scrub a large enough timespan using the mouse.
Raimon Guarro added the
Type
Report
Severity
Normal
Status
Needs Triage
labels 2024-07-18 19:52:14 +02:00
Member

Hi, thanks for the report. Unable to confirm this in 4.2.
Can you check with factory defaults in case some preferences or add-on is involved here?: File > Defaults > Load Factory Settings

Hi, thanks for the report. Unable to confirm this in 4.2. Can you check with factory defaults in case some preferences or add-on is involved here?: `File > Defaults > Load Factory Settings`
Pratik Borhade added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2024-07-19 07:59:12 +02:00
Author

Hi, thanks for looking at it. Problem persists after Loading Factory Defaults. Checked also Sound settings in the preferences within these factory defaults loaded, and they are the same than in 4.1.1, last version working.

Just to make sure that the issue reported is properly clear, the problem appears when advancing frame by frame, one by one, using single strokes of the arrow keys, or moving the playhead with the mouse in really tiny time increments (like 2-5 frames, for example).

Hi, thanks for looking at it. Problem persists after Loading Factory Defaults. Checked also Sound settings in the preferences within these factory defaults loaded, and they are the same than in 4.1.1, last version working. Just to make sure that the issue reported is properly clear, the problem appears when advancing frame by frame, one by one, using single strokes of the arrow keys, or moving the playhead with the mouse in really tiny time increments (like 2-5 frames, for example).
Member

Thanks, I'll reset the status. @ChengduLittleA can you reproduce this? 🤔

Thanks, I'll reset the status. @ChengduLittleA can you reproduce this? 🤔
Pratik Borhade added
Status
Needs Triage
and removed
Status
Needs Information from User
labels 2024-07-19 10:55:07 +02:00
Member

I can confirm this on 4.2 c7bcd1137f , but on latest 4.3 it's good.

Also good on d31ff88af7 but it's pretty old. Setting high priority since it's broken within 4.2 branch.

Here I was testing using this royalty free file I downloaded from youtube audio lib (in case if it's a weird file issue).

@iss any changes in vse comes to mind?

I can confirm this on 4.2 c7bcd1137fec , but on latest 4.3 it's good. Also good on d31ff88af7ee but it's pretty old. Setting high priority since it's broken within 4.2 branch. Here I was testing using this royalty free file I downloaded from youtube audio lib (in case if it's a weird file issue). @iss any changes in vse comes to mind?
YimingWu changed title from Error scrubbing on Video Sequencer to Scrubbing on Video Sequencer does not produce sound if scrbbing spans only a few frames 2024-07-22 03:13:01 +02:00
Member

Actually my local build works just fine all the way up to c7bcd1137f , so I'm not quite sure, it might not happen in debug.

Actually my local build works just fine all the way up to c7bcd1137f , so I'm not quite sure, it might not happen in debug.

I'm having this occur on a fresh update to 4.2 via the official snap package. System is Xubuntu 23.10. Scrubbing audio is flaky when using PulseAudio, but is perfectly fine when using OpenAL.

I'm having this occur on a fresh update to 4.2 via the official snap package. System is Xubuntu 23.10. Scrubbing audio is flaky when using PulseAudio, but is perfectly fine when using OpenAL.
Member

Scrubbing audio is flaky when using PulseAudio, but is perfectly fine when using OpenAL.

Thanks for this piece of additional info! :D

Just went and double checked my configurations, indeed during my test and also in 4.3 my configs are all OpenAL, and the problematic build was using configuration with PulseAudio.

This may points to library internal issue. My limited experience with miniaudio with PulseAudio as backend is that it will indeed have "slow start", maybe it's expected to have a longer packet before it's able to output audio. Though linux has always been a bit problematic in generic audio support. I believe to mitigate the issue, using Jack backend would be the best for low latency but it will grab your sound card and other programs can't use it unless you specifically configure them in the patch bay and it's quite goofy for generic users.

> Scrubbing audio is flaky when using PulseAudio, but is perfectly fine when using OpenAL. Thanks for this piece of additional info! :D Just went and double checked my configurations, indeed during my test and also in 4.3 my configs are all OpenAL, and the problematic build was using configuration with PulseAudio. This may points to library internal issue. My limited experience with miniaudio with PulseAudio as backend is that it will indeed have "slow start", maybe it's expected to have a longer packet before it's able to output audio. Though linux has always been a bit problematic in generic audio support. I believe to mitigate the issue, using `Jack` backend would be the best for low latency but it will grab your sound card and other programs can't use it unless you specifically configure them in the patch bay and it's quite goofy for generic users.
Member

I think for now we can lower priority since switching backend can fix the issue

I think for now we can lower priority since switching backend can fix the issue
YimingWu added
Severity
Normal
and removed
Severity
High
labels 2024-07-24 06:19:55 +02:00

Unless using OpenAL breaks things, I'd recommend having Blender favor OpenAL to PulseAudio on startup, then—the fix isn't obvious to the average user. I only ran across it because I had to use a similar fix on 2.93 (bug #89264).

Unless using OpenAL breaks things, I'd recommend having Blender favor OpenAL to PulseAudio on startup, then—the fix isn't obvious to the average user. I only ran across it because I had to use a similar fix on 2.93 (bug #89264).

Here scrubbing does not work at all.

I can narrow this down to between fae16e7454 and 09666e1498. Will try to bisect, 4.2 was a bit problematic to bisect from what I remember.

From logs 91eb50ec2f, looks relevant.

Here scrubbing does not work at all. I can narrow this down to between fae16e74547f and 09666e149871. Will try to bisect, 4.2 was a bit problematic to bisect from what I remember. From logs 91eb50ec2f436c026233f184a2dfc7141d6f3b44, looks relevant.

Indeed, this issue is caused by 91eb50ec2f. CC @neXyon

Indeed, this issue is caused by 91eb50ec2f. CC @neXyon
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-08-03 11:23:27 +02:00
Member

Should be fixed. Please test and let me know in case the issue is still present!

Should be fixed. Please test and let me know in case the issue is still present!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#125011
No description provided.